--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Blank Insales Template</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/global.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="web_icons.css">
-        <link rel="stylesheet" href="css/media.css">
-        <link rel="stylesheet" href="css/animate.min.css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
-        <script src="js/libs/modernizr.min.js"></script>
-    </head>
-    <body>
-
-<h1>This is а blank InSales template</h1>
-
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Blank Insales Template</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="web_icons.css">
+    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
+    <script src="js/libs/modernizr.min.js"></script>
+</head>
+<body>
+    <header class="g-outer head-wrap">
+        <div class="m-head g-inner">
+            <div class="s-name">
+                <h1 class="s-title"><a href="" class="s-title-url"></a></h1>
+            </div>
+            <nav class="top-nav">
+                <a href="" class="top-nav-item nav-items">Главная</a>
+                <a href="" class="top-nav-item nav-items">Каталог</a>
+                <a href="" class="top-nav-item nav-items">Обратная связь</a>
+                <a href="" class="top-nav-item nav-items">О компании</a>
+                <a href="" class="top-nav-item nav-items">Доставка</a>
+            </nav> <!-- top-nav -->
+            <div class="search-wrap">
+                <div class="search-inputs-wrap">
+                    <form action="">
+                        <input type="text" class="search-input-txt g-input-txt">
+                        <button class="g-input-submit search-input-submit"></button>
+                    </form>
+                </div> <!-- search-inputs-wrap -->
+            </div> <!-- search-wrap -->
+        </div> <!-- m-head -->
+    </header>  <!-- head-wrap -->
+</body>
 </html>
