--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Blank Insales Template</title>
+    <title>Славяночка</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/global.css">
@@ -20,8 +20,10 @@
     <header class="g-outer head-wrap">
         <div class="m-head g-inner">
             <div class="s-name">
-                <h1 class="s-title"><a href="" class="s-title-url"></a></h1>
-            </div>
+                <h1 class="s-title">
+                    <a href="" class="s-title-url">Название сайта</a>
+                </h1> <!-- s-title -->
+            </div><!-- s-name -->
             <nav class="top-nav">
                 <a href="" class="top-nav-item nav-items">Главная</a>
                 <a href="" class="top-nav-item nav-items">Каталог</a>
