--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
                     </form>
                 </div> <!-- search-inputs-wrap -->
             </div> <!-- search-wrap -->
+
+            <div class="cart-wrap fr">
+                <div class="cart">
+                    <span class="item-count">2</span>
+                </div>  <!-- cart -->
+            </div>  <!-- cart-wrap -->
+
+            <div class="log-reg-wrap fr">
+                <a href="#" class="login">Войти</a>
+            </div>  <!-- log-reg-wrap -->
+
         </div> <!-- m-head -->
     </header>  <!-- head-wrap -->
+    <section class="main-content main-page" role="main">
+        
+    </section> <!-- main-content -->
 </body>
 </html>
