--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
          </nav> <!-- main-nav -->
     </section> <!--  main-nav-wrap -->
 
-    <section class="slider-wrap g-inner">
-        <div class="slider">
+    <section class="slider-wrap g-inner cf">
+
+        <div class="slider fl">
             <div id='coin-slider'>
                 <a href="img01_url" target="_blank">
                     <img src='slider3.jpg' >
@@ -156,6 +157,16 @@
                 </a>
             </div>  <!-- #coin-slider -->
         </div>  <!-- slider -->
+
+        <figure class="bnrs-wrap fr">
+            <a href="" class="brns-item" style="background: #fff url('http://lorempixel.com/300/200/') center center no-repeat;">
+               
+            </a>
+                  <a href="" class="brns-item" style="background: #fff url('http://lorempixel.com/300/200/fashion/3') center center no-repeat;">
+               
+            </a>
+        </figure>
+
     </section><!-- slide-wrap -->  
 
     <section class="main-content main-page" role="main">
