--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             </div> <!-- search-wrap -->
 
             <div class="cart-wrap abs">
-                <div class="cart">
+                <a href="{{cart.url}}" class="cart">
                     <span class="item-count">2</span>
-                </div>  <!-- cart -->
+                </a>  <!-- cart -->
             </div>  <!-- cart-wrap -->
 
-            <div class="log-reg-wrap abs  ">
+            <div class="log-reg-wrap abs">
                 <a href="#" class="login">Войти</a>
             </div>  <!-- log-reg-wrap -->
 
