--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
                     <div class="main-nav-item main-nav-item_two">
                         <a href="" class="main-nav-item-url main-nav-item-url_two">Одеяла</a>
                     </div>  <!-- main-nav-item_two -->
-                    <div class="main-nav-item main-nav-item_two rel">
+                    <div class="main-nav-item main-nav-item_two rel has">
                         <a href="" class="main-nav-item-url main-nav-item-url_two">Полотенца</a>
                         <nav class="main-nav-sub main-nav-sub_subsub abs">
                             <div class="main-nav-item main-nav-item_three">
-                                <a href="" class="main-nav-item-url main-nav-item-url_three"></a>
+                                <a href="" class="main-nav-item-url main-nav-item-url_three">Одеяла</a>
                             </div><!-- main-nav-item_three -->
                             <div class="main-nav-item main-nav-item_three">
-                                <a href="" class="main-nav-item-url main-nav-item-url_three"></a>
+                                <a href="" class="main-nav-item-url main-nav-item-url_three">Подушки</a>
                             </div><!-- main-nav-item_three -->
                             <div class="main-nav-item main-nav-item_three">
-                                <a href="" class="main-nav-item-url main-nav-item-url_three"></a>
+                                <a href="" class="main-nav-item-url main-nav-item-url_three">Постельное белье</a>
                             </div><!-- main-nav-item_three -->
                         </nav>  <!-- main-nav-sub_subsub -->
                     </div>  <!-- main-nav-item_two -->
