--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
     <script src="js/libs/modernizr.min.js"></script>
+    <script src="js/functions.js"></script>
     <script src="js/libs/coin-slider.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
@@ -126,8 +127,33 @@
                 <a href="" class="main-nav-item-url main-nav-item-url_one">Наматрасники</a>
             </div> <!-- main-nav-item -->
 
-             <div class="main-nav-item main-nav-item_one">
+             <div class="main-nav-item main-nav-item_one rel">
                 <a href="" class="main-nav-item-url main-nav-item-url_one">Простыни</a>
+                 <nav class="main-nav-sub main-nav-sub_sub abs">
+                    <div class="main-nav-item main-nav-item_two">
+                        <a href="" class="main-nav-item-url main-nav-item-url_two">Подушки</a>
+                    </div>  <!-- main-nav-item_two -->
+                    <div class="main-nav-item main-nav-item_two">
+                        <a href="" class="main-nav-item-url main-nav-item-url_two">Одеяла</a>
+                    </div>  <!-- main-nav-item_two -->
+                    <div class="main-nav-item main-nav-item_two rel has">
+                        <a href="" class="main-nav-item-url main-nav-item-url_two">Полотенца</a>
+                        <nav class="main-nav-sub main-nav-sub_subsub abs">
+                            <div class="main-nav-item main-nav-item_three">
+                                <a href="" class="main-nav-item-url main-nav-item-url_three">Одеяла</a>
+                            </div><!-- main-nav-item_three -->
+                            <div class="main-nav-item main-nav-item_three">
+                                <a href="" class="main-nav-item-url main-nav-item-url_three">Подушки</a>
+                            </div><!-- main-nav-item_three -->
+                            <div class="main-nav-item main-nav-item_three">
+                                <a href="" class="main-nav-item-url main-nav-item-url_three">Постельное белье</a>
+                            </div><!-- main-nav-item_three -->
+                        </nav>  <!-- main-nav-sub_subsub -->
+                    </div>  <!-- main-nav-item_two -->
+                    <div class="main-nav-item main-nav-item_two">
+                        <a href="" class="main-nav-item-url main-nav-item-url_two">Махровые изделия</a>
+                    </div>  <!-- main-nav-item_two -->
+                </nav> <!-- main-nav-sub_sub -->
             </div> <!-- main-nav-item -->
 
          </nav> <!-- main-nav -->
