--- a/index.html
+++ b/index.html
@@ -369,7 +369,9 @@
         </div> <!-- item-lists-wrap -->
 
         <aside class="sidebar fr">
-            
+            <h2 class="main-title sidebar-title">
+              <a href="{{collection.url}}" class="sidebar-title-url">Специальное</a>
+            </h2>
         </aside> <!-- sidebar -->
     </section> <!-- main-content -->
 
