--- a/index.html
+++ b/index.html
@@ -372,6 +372,18 @@
             <h2 class="main-title sidebar-title">
               <a href="{{collection.url}}" class="sidebar-title-url">Специальное</a>
             </h2>
+            <article class="sidebar-item">
+              <figure class="sidebar-item-img">
+                <a href="" class="sidebar-item-img-url">
+                  <img src="" alt="" class="sidebar-item-image">
+                </a>
+              </figure>  <!-- sidebar-item-img -->
+              <h1 class="g-item-title sidebar-item-title">
+                <a href="" class="sidebar-item-title-url g-item-ttile-url"></a>
+              </h1> <!-- sidebar-item-title -->
+              <div class="sidebar-item-old-price g-old-price">5800 руб.</div>
+              <div class="g-price sidebar-item-price">4400 руб.</div>
+            </article><!-- sidebar-item --> 
         </aside> <!-- sidebar -->
     </section> <!-- main-content -->
 
