--- a/index.html
+++ b/index.html
@@ -437,9 +437,21 @@
               <div class="sidebar-item-old-price g-old-price"><del>5800 руб.</del></div>
               <div class="g-price sidebar-item-price"><ins>4400 руб.</ins></div>
             </article><!-- sidebar-item --> 
-            
+
         </aside> <!-- sidebar -->
     </section> <!-- main-content -->
+
+    <footer class="main-foot g-inner">
+      <nav class="bottom-nav fl">
+        <a href="" class="bottom-nav-item">Главная</a>
+        <a href="" class="bottom-nav-item">Правила</a>
+        <a href="" class="bottom-nav-item">Новости</a>
+        <a href="" class="bottom-nav-item">Доставка</a>
+        <a href="" class="bottom-nav-item">Каталог</a>
+        <a href="" class="bottom-nav-item">О Нас</a>
+      </nav>
+      <div class="copy fr"><small class="copyright-text">Copyright &copy; 2013 </small><a href="{{account.url}}" class="copy-site">Славяночка</a> / <small>Сделанно в <a href="http://insales.ru" class="cms">InSales</a></small></div>
+    </footer>
 
 </body>
 </html>
