update sidebar navigation

--- a/catalog.html
+++ b/catalog.html
@@ -364,6 +364,7 @@
         </div> <!-- item-lists-wrap -->
 
         <aside class="sidebar fr">
+          <section class="sidebar-box cf">
             <h2 class="main-title sidebar-title">
               <a href="{{collection.url}}" class="sidebar-title-url">Специальное</a>
             </h2>
@@ -432,7 +433,23 @@
               <div class="sidebar-item-old-price g-old-price"><del>5800 руб.</del></div>
               <div class="g-price sidebar-item-price"><ins>4400 руб.</ins></div>
             </article><!-- sidebar-item --> 
+          </section><!-- sidebar-box -->
 
+          <section class="sidebar-box cf">
+            <h2 class="main-title sidebar-title">
+                Информация
+            </h2>
+
+            <nav class="sidebar-nav">
+              <a href="{{link.url}}" class="sidebar-nav-item">как сделать заказ</a>
+              <a href="{{link.url}}" class="sidebar-nav-item">доставка/оплата</a>
+              <a href="{{link.url}}" class="sidebar-nav-item">контакты</a>
+              <a href="{{link.url}}" class="sidebar-nav-item">акции</a>
+              <a href="{{link.url}}" class="sidebar-nav-item">о компании</a>
+            </nav> <!-- sidebar-nav -->
+
+            
+          </section>  <!-- sidebar-box -->
         </aside> <!-- sidebar -->
     </section> <!-- main-content -->
     </div> <!-- main-wrap -->
