--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
         </div> <!-- item-lists-wrap -->
 
         <aside class="sidebar fr">
+          <section class="sidebar-box cf">
             <h2 class="main-title sidebar-title">
               <a href="{{collection.url}}" class="sidebar-title-url">Специальное</a>
             </h2>
@@ -435,7 +436,7 @@
               <div class="sidebar-item-old-price g-old-price"><del>5800 руб.</del></div>
               <div class="g-price sidebar-item-price"><ins>4400 руб.</ins></div>
             </article><!-- sidebar-item --> 
-
+          </section>  <!-- sidebar-box -->
         </aside> <!-- sidebar -->
     </section> <!-- main-content -->
     </div> <!-- main-wrap -->
