--- a/catalog.html
+++ b/catalog.html
@@ -239,7 +239,68 @@
           </div>
 
           <div class="filter-sorting-wrap">
-            
+            <form action="{{catalog.url}}" id="order">
+              <div class="filtering">
+                <strong class="filter-title">Подобрать товары по параметрам:</strong>
+                <div class="filter-item cf">
+                  <label for="" class="filter-item-label fl">Цена:</label>
+                  <div class="price-filter-wrap fr">
+                  <input type="text" class="low-price">
+                  до
+                  <input type="text" class="hight-price">
+                 </div><!-- price-filter-wrap --> 
+                </div> <!-- filter-item -->
+
+                <div class="filter-item cf cb">
+                  <label for="" filter-item-label fl>Производитель:</label>
+                  <select name="" id="" class="filter-select fr">
+                    <option value="" class="filter-option">Все</option>
+                    <option value="" class="filter-option">Еврочехол</option>
+                    <option value="" class="filter-option">Famille</option>
+                    <option value="" class="filter-option">Valtery</option>
+                    <option value="" class="filter-option">СайлиД</option>
+                    <option value="" class="filter-option">Stefan Landsberg </option>
+                  </select>
+                </div> <!-- filter-item -->
+
+                <div class="filter-item cf cb">
+                <label for="" filter-item-label fl>Ткань:</label>
+                <select name="" id="" class="filter-select fr">
+                  <option value="" class="filter-option">(все)</option>
+                  <option value="" class="filter-option">бамбук</option>
+                  <option value="" class="filter-option">вискоза</option>
+                  <option value="" class="filter-option">хлопок</option>
+                  <option value="" class="filter-option">ранфорс</option>
+                  <option value="" class="filter-option">тенцель</option>
+                </select>
+                </div> <!-- filter-item -->
+
+                <div class="filter-item cf cb">
+                <label for="" filter-item-label fl>Размер</label>
+                <select name="" id="" class="filter-select fr">
+                  <option value="" class="filter-option">(все)</option>
+                  <option value="" class="filter-option">двуспальное</option>
+                  <option value="" class="filter-option">полуторное</option>
+                  <option value="" class="filter-option">евро</option>
+                  <option value="" class="filter-option">семейное</option>
+                  <option value="" class="filter-option">отдельный предметы</option>
+                </select>
+              </div> <!-- filter-item -->
+
+                <div class="filter-item cf cb">
+                <label for="" filter-item-label fl>Цвет</label>
+                <select name="" id="" class="filter-select fr">
+                  <option value="" class="filter-option">(все)</option>
+                  <option value="" class="filter-option">Белый</option>
+                  <option value="" class="filter-option">Желтый</option>
+                  <option value="" class="filter-option">Зеленый</option>
+                  <option value="" class="filter-option">Красный</option>
+                  <option value="" class="filter-option">Коричневый</option>
+                </select>
+              </div> <!-- filter-item -->
+
+              </div>  <!-- filtering -->
+            </form>
           </div> <!-- filter-sorting-wrap -->
 
                      
