--- a/catalog.html
+++ b/catalog.html
@@ -238,16 +238,17 @@
             </nav>
           </div>
 
-          <div class="filter-sorting-wrap">
+          <div class="filter-sorting-wrap cf">
             <form action="{{catalog.url}}" id="order">
-              <div class="filtering">
+              <div class="filtering fl">
                 <strong class="filter-title">Подобрать товары по параметрам:</strong>
+
                 <div class="filter-item cf">
                   <label for="" class="filter-item-label fl">Цена:</label>
                   <div class="price-filter-wrap fr">
-                  <input type="text" class="low-price">
+                  <input type="text" class="low-price"> 
                   до
-                  <input type="text" class="hight-price">
+                   <input type="text" class="hight-price">
                  </div><!-- price-filter-wrap --> 
                 </div> <!-- filter-item -->
 
@@ -264,42 +265,62 @@
                 </div> <!-- filter-item -->
 
                 <div class="filter-item cf cb">
-                <label for="" filter-item-label fl>Ткань:</label>
-                <select name="" id="" class="filter-select fr">
-                  <option value="" class="filter-option">(все)</option>
-                  <option value="" class="filter-option">бамбук</option>
-                  <option value="" class="filter-option">вискоза</option>
-                  <option value="" class="filter-option">хлопок</option>
-                  <option value="" class="filter-option">ранфорс</option>
-                  <option value="" class="filter-option">тенцель</option>
-                </select>
+                  <label for="" filter-item-label fl>Ткань:</label>
+                  <select name="" id="" class="filter-select fr">
+                    <option value="" class="filter-option">(все)</option>
+                    <option value="" class="filter-option">бамбук</option>
+                    <option value="" class="filter-option">вискоза</option>
+                    <option value="" class="filter-option">хлопок</option>
+                    <option value="" class="filter-option">ранфорс</option>
+                    <option value="" class="filter-option">тенцель</option>
+                  </select>
                 </div> <!-- filter-item -->
 
                 <div class="filter-item cf cb">
-                <label for="" filter-item-label fl>Размер</label>
-                <select name="" id="" class="filter-select fr">
-                  <option value="" class="filter-option">(все)</option>
-                  <option value="" class="filter-option">двуспальное</option>
-                  <option value="" class="filter-option">полуторное</option>
-                  <option value="" class="filter-option">евро</option>
-                  <option value="" class="filter-option">семейное</option>
-                  <option value="" class="filter-option">отдельный предметы</option>
-                </select>
-              </div> <!-- filter-item -->
+                  <label for="" filter-item-label fl>Размер:</label>
+                  <select name="" id="" class="filter-select fr">
+                    <option value="" class="filter-option">(все)</option>
+                    <option value="" class="filter-option">двуспальное</option>
+                    <option value="" class="filter-option">полуторное</option>
+                    <option value="" class="filter-option">евро</option>
+                    <option value="" class="filter-option">семейное</option>
+                    <option value="" class="filter-option">отдельный предметы</option>
+                  </select>
+                </div> <!-- filter-item -->
 
                 <div class="filter-item cf cb">
-                <label for="" filter-item-label fl>Цвет</label>
-                <select name="" id="" class="filter-select fr">
-                  <option value="" class="filter-option">(все)</option>
-                  <option value="" class="filter-option">Белый</option>
-                  <option value="" class="filter-option">Желтый</option>
-                  <option value="" class="filter-option">Зеленый</option>
-                  <option value="" class="filter-option">Красный</option>
-                  <option value="" class="filter-option">Коричневый</option>
-                </select>
-              </div> <!-- filter-item -->
-
+                  <label for="" filter-item-label fl>Цвет:</label>
+                  <select name="" id="" class="filter-select fr">
+                    <option value="" class="filter-option">(все)</option>
+                    <option value="" class="filter-option">Белый</option>
+                    <option value="" class="filter-option">Желтый</option>
+                    <option value="" class="filter-option">Зеленый</option>
+                    <option value="" class="filter-option">Красный</option>
+                    <option value="" class="filter-option">Коричневый</option>
+                  </select>
+                </div> <!-- filter-item -->
+                 <div class="filter-sorting-submit-wrap cb">
+                   <button class="filter-submit filter-button">Подобрать</button>
+                   <button class="filter-reset filter-button">Сбросить</button>
+                </div> <!-- filter-sorting-submit-wrap  -->
               </div>  <!-- filtering -->
+               
+              <div class="sorting fr">
+                <strong class="filter-title">Сортировка товаров:</strong>
+                 <div class="filter-item cf cb">
+                   
+                    <select name="" id="" class="filter-select fr">
+                     <option value=""> Сортировать по</option>
+                      <option value="price">По возрастанию цены</option>
+                      <option value="descending_price">По убыванию цены</option>
+                      <option value="title">Алфавиту А-Я</option>
+                      <option value="descending_title">Алфавиту Я-А</option>
+                      <option value="age">Дате добавления Новые-Старые</option>
+                      <option value="descending_age">Дате добавления Старые-Новые</option>
+                    </select>
+                  </div> <!-- filter-item -->
+                </div> <!-- sorting -->
+
             </form>
           </div> <!-- filter-sorting-wrap -->
 
