--- a/item.html
+++ b/item.html
@@ -171,7 +171,7 @@
             <div class="item-image-part fl">
               <figure class="item-images">
                 <a href="" class="item-image-url">
-                  <img src="" alt="" class="item-main-image">
+                  <img src="item1.jpg" alt="" class="item-main-image">
                 </a>
                 <div class="other-images" id="other-images-carousel">
                   <a href="" class="other-images-item">
