--- a/catalog.html
+++ b/catalog.html
@@ -19,6 +19,7 @@
     <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
     <script src="js/libs/modernizr.min.js"></script>
     <script src="js/functions.js"></script>
+    <script src="js/libs/plugins.js"></script>
     <script src="js/libs/coin-slider.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
