--- a/item.html
+++ b/item.html
@@ -282,6 +282,11 @@ next: "#other-next"
               </div> <!-- item-buy-part -->
 
             </div> <!-- info-part --> 
+            <section class="full-description-wrap cb">
+              <div class="the-description editor">
+                <p>Далеко-далеко за словесными горами в <a href="#s">стране</a>, гласных и согласных живут рыбные тексты. О, даже, предупреждал, путь маленький подпоясал сбить запятых прямо бросил которое он</p> <p>курсивных по всей ведущими напоивший инициал власти последний за! Наш, дороге первую лучше страна диких рыбного маленькая безорфографичный возвращайся?</p>
+              </div> <!-- the-description -->
+            </section>  <!-- full-description-wrap -->
           </section>
         </div> <!-- item-lists-wrap -->
 
